--- a/defs.css
+++ b/defs.css
@@ -122,7 +122,7 @@ div#loader
 {
     background: no-repeat center url(img/loader.gif);
     height: 32px;
-    text-height: 32px;
+    line-height: 32px;
     text-align: left;
     vertical-align: middle;
     visibility: hidden;
@@ -235,4 +235,14 @@ th.headerSortDown:after
     text-align: center;
     color: #aaa;
     border-top: 1px dotted #ddd;
+}
+
+#player
+{
+    font-size: 75;
+    color: #888;
+    position: fixed;
+    top: 1em;
+    left: 1em;
+    
 }
